src- Version 4.19/objects/Quote_Rate_Plan__c.object
<CustomObject>
    <customHelpPage>support</customHelpPage>
    <description>The tier 2 of the product catalog linked to the Quote.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Rate_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Rate Plan</label>
        <referenceTo>Product_Rate_Plan__c</referenceTo>
        <relationshipLabel>Quote Rate Plan</relationshipLabel>
        <relationshipName>RatePlan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Product__c</fullName>
        <label>Quote Product</label>
        <referenceTo>Quote_Product__c</referenceTo>
        <relationshipLabel>Quote Rate Plans</relationshipLabel>
        <relationshipName>Quote_Rate_Plan</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Renewed_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewed From</label>
        <referenceTo>Job_Rate_Plan__c</referenceTo>
        <relationshipLabel>Quote Rate Plans</relationshipLabel>
        <relationshipName>Quote_Rate_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SequenceNumber__c</fullName>
        <label>Quote RatePlan Sequence Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <label>Total Price</label>
        <summarizedField>Quote_Rate_Plan_Charge__c.Price__c</summarizedField>
        <summaryForeignKey>Quote_Rate_Plan_Charge__c.Quote_Rate_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Quote_Rate_Plans_Charges__c</fullName>
        <label>Total Quote Rate Plans Charges</label>
        <summaryForeignKey>Quote_Rate_Plan_Charge__c.Quote_Rate_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Quote Rate Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Quote Rate Plan  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Rate Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>